<resources>
    <string name="app_name">Password E-Safe</string>

    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="title_activity_passkey">Passkey</string>
    <string name="auto_backup">Enabling auto backup will instantly save a backup of your passwords on your phone\'s memory every time you save, update, or delete a password.</string>
    <string name="show_pass">Show Passkey</string>
    <string name="app_version">Password E-Safe 2.6</string>
    <string name="brief_desc">This application provides an efficient solution to keep your passwords safely on your device</string>
    <string name="passwords_enc">The passwords are encrypted which provides maximum security for you.</string>
    <string name="new_pass">New Password</string>
    <string name="pass_type_choose">Please choose a password type to save</string>
    <string name="old_key">Old Passkey:</string>
    <string name="new_key">New Passkey:</string>
    <string name="confirm_passkey">Confirm Passkey</string>
    <string name="title">Title:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="email_2">Email</string>
    <string name="password">Password:</string>
    <string name="show_password">Show</string>
    <string name="notes">Notes:</string>
    <string name="configuration_complete">Configuration complete!</string>
    <string name="config_message">You completed configuring your application\'s settings! Please click start...</string>
    <string name="start">Start</string>
    <string name="enable_backup">Enable Auto Backup</string>
    <string name="restore_backup">Restore Old Backup</string>
    <string name="restore_confirmation">An old backup was found on your phone. Do you want to restore it ?</string>
    <string name="restore_note">Note that if you skip this step the backup will be deleted after finishing the configuration in the next step!</string>
    <string name="urgent_passkey">It is recommended that you use a passkey for your application for more security!</string>
    <string name="enter_passkey">Enter Passkey</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_text_one">Since you have fish memory, this application will help you to keep your passwords safely on your device.</string>
    <string name="welcome_text_two">Please go through this wizard to set up your password safe and start.</string>
    <string name="restore_passwords">Restore passwords</string>
    <string name="backup_passwords">Backup passwords</string>
    <string name="settings_auto_backup">Auto Backup</string>
    <string name="add_change_passkey">Add/Change Passkey</string>
    <string name="remove_passkey">Remove Passkey</string>
    <string name="restore_button">Restore</string>
    <string name="other_apps">Other Apps</string>
    <string name="backup_successful">Backup Successful!</string>
    <string name="backup_fail">Backup Failed</string>
    <string name="auto_backup_activated">Auto Backup activated</string>
    <string name="auto_backup_deactivated">Auto Backup deactivated</string>
    <string name="match">match</string>
    <string name="mismatch">mis-match</string>
    <string name="passkey_mismatch">Passkeys Mis-Match</string>
    <string name="no_passkey">You didn\'t insert any passkey</string>
    <string name="new_pass_insert_confirm">Are you sure you want to save this new password?</string>
    <string name="passowrd_saved_successfully">Password saved successfully</string>

    <string name="backup_restored">Backup restored successfully!</string>
    <string name="change_passkey_title">Change Passkey</string>
    <string name="wrong_passkey">Wrong Passkey</string>
    <string name="paskey_confirm_error">Passkey Confirmation Error</string>
    <string name="remove_passkey_confirm">Are you sure you want to remove the passkey?</string>
    <string name="remove_passkey_success">Passkey removed successfully!</string>
    <string name="wrong_passkey_try">Wrong Passkey, Try Again</string>

    <string name="delete_Password">Delete Password</string>
    <string name="delete_confirmation">Are you sure you want to delete this password?</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_password_confirm">Are you sure you want to save changes?</string>
    <string name="update_success">Updated successfully</string>
    <string name="update_fail">Update Failed</string>
    <string name="load_fail">Can\'t Load Information</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_newest">Newest to oldest</string>
    <string name="sort_oldest">Oldest to newest</string>
    <string name="sort_type">Type</string>
    <string name="sort_title_az">Title (A to Z)</string>
    <string name="sort_title_za">Title (Z to A)</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="passkeySmall">Passkey must not be less than 4 characters</string>
    <string name="cant_restore">Can\'t restore backup!</string>
    <string name="passkey_already_removed">Passkey is not set</string>
    <string name="action_save">Save</string>
    <string name="saveChanges">Save Changes</string>
    <string name="saveChangesConfirm">Do you want to save changes?</string>
    <string name="no_password">No password typed. Please enter a password</string>
    <string name="passowrd_saved_fail">Error! Cannot save password.</string>
    <string name="search_hint">Search passwords (Title, Email, or Username)</string>
    <string name="search">Search</string>
    <string name="change_type">Change type</string>
    <string name="action_pass_gen">Password Generator</string>
    <string name="caps" translatable="false">Captial Letters: A, B ..., Z</string>
    <string name="small" translatable="false">Small Letters: a, b..., z</string>
    <string name="numbers" translatable="false">Numbers: 0, 1..., 9</string>
    <string name="syms" translatable="false"><![CDATA[Symbols: $, @, %, &...]]></string>
    <string name="passLength">Password Length:</string>
    <string name="passInclude">Charset</string>
    <string name="press">Press</string>
    <string name="shake">and shake to generate</string>
    <string name="charsetEmpty">Empty charset. Please choose charset</string>
    <string name="copied">Copied to clipboard</string>
</resources>
