<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/clSettings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/white">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/restore_passwords"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/tvRestore"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/backup_passwords"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/tvBackup"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayDivider"/>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/settings_auto_backup"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/swDailyBackup"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:text="@string/auto_backup"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/add_change_passkey"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/tvChangePasskey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/remove_passkey"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:id="@+id/tvRemovePasskey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grayDivider"/>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:id="@+id/settingsToolbar"
        app:elevation="4dp"
        app:title="@string/action_settings"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:theme="@style/ToolBarStyle"/>

</android.support.design.widget.CoordinatorLayout>