<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/nav_menu_group1">
        <item android:id="@+id/action_sort"
            android:title="@string/sort"
            android:foreground="?android:attr/selectableItemBackground"
            android:orderInCategory="1"
            android:icon="@drawable/ic_sort"
            app:showAsAction="always"/>
    </group>

    <group android:id="@+id/nav_menu_group2">
        <item android:id="@+id/action_settings"
            android:title="Settings"
            android:foreground="?android:attr/selectableItemBackground"
            android:orderInCategory="2"
            android:icon="@drawable/ic_settings"
            app:showAsAction="always"/>

        <item android:id="@+id/action_about"
            android:title="@string/action_about"
            android:foreground="?android:attr/selectableItemBackground"
            android:orderInCategory="3"
            android:icon="@drawable/ic_info"
            app:showAsAction="always" />

        <item android:id="@+id/action_pass_generator"
            android:title="@string/action_pass_gen"
            android:foreground="?android:attr/selectableItemBackground"
            android:orderInCategory="4"
            android:icon="@drawable/ic_key"
            app:showAsAction="always" />
    </group>

    <group android:id="@+id/nav_menu_group3">
        <item android:title="@null"
            android:orderInCategory="5"/>
    </group>

</menu>