<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/settings_auto_backup"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:src="@drawable/ic_safe"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/auto_backup"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"/>

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:switchPadding="8dp"
        android:text="@string/enable_backup"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:id="@+id/swEnableAutoBackup"/>

</LinearLayout>