<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/configuration_complete"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/ic_safe"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/config_message"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:id="@+id/btStart"
        android:elevation="2dp"
        android:translationZ="6dp"
        android:background="@drawable/bt_start"
        android:stateListAnimator="@anim/raised_button_anim"/>

</LinearLayout>