<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.its.passwordkeeper.Result">

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item android:id="@+id/action_pass_type"
        android:title="@string/change_type"
        android:icon="@drawable/menu_google"
        android:orderInCategory="3"
        app:showAsAction="always">

        <menu>

            <item android:id="@+id/action_type_google"
                android:title="Google"
                android:icon="@drawable/menu_google"
                android:orderInCategory="1"
                android:checkable="true"
                app:showAsAction="always"/>

            <item android:id="@+id/action_type_facebook"
                android:title="Facebook"
                android:icon="@drawable/menu_facebook"
                android:orderInCategory="2"
                android:checkable="true"
                app:showAsAction="always"/>

            <item android:id="@+id/action_type_twitter"
                android:title="Twitter"
                android:icon="@drawable/menu_twitter"
                android:orderInCategory="3"
                android:checkable="true"
                app:showAsAction="always"/>
            <item android:id="@+id/action_type_microsoft"
                android:title="Microsoft"
                android:icon="@drawable/menu_microsoft"
                android:orderInCategory="4"
                android:checkable="true"
                app:showAsAction="always"/>
            <item android:id="@+id/action_type_instagram"
                android:title="Instagram"
                android:icon="@drawable/menu_instagram"
                android:orderInCategory="5"
                android:checkable="true"
                app:showAsAction="always"/>
            <item android:id="@+id/action_type_snapchat"
                android:title="Snapchat"
                android:icon="@drawable/menu_snapchat"
                android:orderInCategory="6"
                android:checkable="true"
                app:showAsAction="always"/>
            <item android:id="@+id/action_type_linkedIn"
                android:title="LinkedIn"
                android:icon="@drawable/menu_linkedin"
                android:orderInCategory="7"
                android:checkable="true"
                app:showAsAction="always"/>

            <item android:id="@+id/action_type_custom"
                android:title="Other"
                android:icon="@drawable/menu_custom"
                android:orderInCategory="8"
                android:checkable="true"
                app:showAsAction="always"/>

        </menu>

    </item>

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save_white"
        android:orderInCategory="4"
        app:showAsAction="always" />

</menu>